22/04/2015 find() for getFirst() in some querys to handle less data